versioned_docs/version-3.0/gettingStarted/alternatives/alternative-to-clickhouse.mdx
---
{
    "title": "Alternative to ClickHouse",
    "language": "en"
}

---

Apache Doris and ClickHouse are both leading global real-time data warehouses, supporting columnar storage and fast queries. Doris has advantages like higher concurrency, more efficient joins, easier maintenance, and MySQL-like SQL syntax, making it simpler to use and deploy.

## Featured Migration Cases

<div style={{ display:'flex', justifyContent:'space-between' }}>

    <div style={{paddingTop:'2rem', paddingBottom:'2rem',paddingLeft:'2rem',paddingRight:'2.5rem', boxSizing:'border-box', borderWidth:'0.5px', borderRadius:'0.75px', borderColor:'#e5e7eb'}}>
    
        <div style={{ display:'flex', justifyContent:'space-between', flexDirection:'column' }}>
            <div style={{marginBottom:'1.25rem'}}>
                <img alt='tencent-music' loading="lazy" width="331" height="40" decoding="async" data-nimg="1" style={{color:'transparent'}} src="/images/comparisons/tencent-music.png" />
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
            “Tencent Music's data platform has migrated from ClickHouse to Apache Doris, improving data timeliness and reducing maintenance costs. Doris' flexible ingestion methods and robust consistency protocol ensure high availability and reliability.”
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
                <p><strong>Highlight:</strong></p>             
                <ul>
                    <li>Massive boost in multi-table join performance.</li>
                    <li>Easy scaling and maintenance.</li>
                    <li>Efficient data processing and real-time updates.</li>
                </ul>
            </div>
        </div>
    
    </div>

    <div style={{paddingTop:'2rem', paddingBottom:'2rem',paddingLeft:'2rem',paddingRight:'2.5rem', boxSizing:'border-box', borderWidth:'0.5px', borderRadius:'0.75px', borderColor:'#e5e7eb'}}>
    
        <div style={{ display:'flex', justifyContent:'space-between', flexDirection:'column' }}>
            <div style={{marginBottom:'1.25rem'}}>
                <img alt='tencent-music' loading="lazy" width="150" height="40" decoding="async" data-nimg="1" style={{color:'transparent'}} src="/images/comparisons/youzan.png" />
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
            “Apache Doris has faster query response times than ClickHouse in the vast majority of scenarios, especially in complex join scenarios, where its performance is significantly superior to that of ClickHouse.”
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
                <p><strong>Highlight:</strong></p>             
                <ul>
                    <li>Core business queries 2-3x.</li>
                    <li>Complex join queries 2-10x.</li>
                    <li>Can run all ClickHouse OOM queries.</li>
                </ul>
            </div>
        </div>
    
    </div>

     <div style={{paddingTop:'2rem', paddingBottom:'2rem',paddingLeft:'2rem',paddingRight:'2.5rem', boxSizing:'border-box', borderWidth:'0.5px', borderRadius:'0.75px', borderColor:'#e5e7eb'}}>
    
        <div style={{ display:'flex', justifyContent:'space-between', flexDirection:'column' }}>
            <div style={{marginBottom:'1.25rem'}}>
                <img alt='tencent-music' loading="lazy" width="120" height="40" decoding="async" data-nimg="1" style={{color:'transparent'}} src="/images/comparisons/kwai.png" />
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
            “By replacing ClickHouse with Doris, Kwai successfully upgraded to a lakehouse architecture, simplifying the data pipeline and eliminating the need for data import, as Doris can directly access data lake data.”
            </div>
            <div style={{marginBbottom:'1.25rem'}}>
                <p><strong>Highlight:</strong></p>             
                <ul>
                    <li>Directly query of data lake data.</li>
                    <li>Improved query performance.</li>
                    <li>Flexible data governance with materialized views.</li>
                </ul>
            </div>
        </div>
    
    </div>

</div> 


## Apache Doris vs. ClickHouse


<table border="1">
    <thead>
        <tr>
            <th></th>
            <th>Apache Doris</th>
            <th>ClickHouse</th>
        </tr>
    </thead>
    <tbody>
    <tr>
        <td><strong>Architecture & SQL</strong></td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>Based on MPP architecture</li>
            <li style={{fontSize:'14px'}}>Standard SQL support, MySQL-compatible</li>
        </ul>
        </td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>Uses Scatter-Gather architecture</li>
            <li style={{fontSize:'14px'}}>SQL-like capabilities but with non-standard SQL</li>
        </ul>
        </td>
    </tr>
      <tr>
        <td><strong>Queries</strong></td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>Distributed joins</li>
            <li style={{fontSize:'14px'}}>Cost-Based Optimization (CBO)</li>
            <li style={{fontSize:'14px'}}>Query rewrites and multi-table materialized views</li>
            <li style={{fontSize:'14px'}}>Higher concurrent  performance</li>
        </ul>
        </td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>Poor join implementation</li>
            <li style={{fontSize:'14px'}}>Lacks a Cost-Based Optimizer (CBO)</li>
            <li style={{fontSize:'14px'}}>Only supports single-table materialized views</li>
            <li style={{fontSize:'14px'}}>Lower concurrency performance</li>
        </ul>
        </td>
    </tr>
    <tr>
        <td><strong>Real-time Updates</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>Features a strongly consistent primary key storage model, supporting synchronous data updates and deletions</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>Only supports asynchronous updates, allowing old values to be read after an update.</li></ul></td>
    </tr>
    <tr>
        <td><strong>Data API</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>Offers high-throughput read APIs based on Arrow-flight, facilitating integration with other engines such as data science/AI tools</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>Only inefficient data reading via JDBC API</li></ul></td>
    </tr>
    <tr>
        <td><strong>Building Open Lakehouse</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>Serves as a Lakehouse SQL engine, supporting queries on Hive, Hudi, Iceberg, and Parquet data lake formats</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>Limited Lakehouse integration capabilities</li></ul></td>
    </tr>
    <tr>
        <td><strong>Operations & Maintenance</strong></td>
        <td><ul><li style={{fontSize:'14px'}}>Supports automatic scaling in, scaling out, and replica balancing</li></ul></td>
        <td><ul><li style={{fontSize:'14px'}}>Requires manual rebalancing during scaling operations</li></ul></td>
    </tr>
       <tr>
        <td><strong>Performance</strong></td>
        <td>
        <ul>
            <li style={{fontSize:'14px'}}>In wide table benchmarks (ClickBench), Doris ranked top 1 or top 2 in October 2022 and October 2024, outperforming ClickHouse</li>
            <li style={{fontSize:'14px'}}>In large TPC-H and TPC-DS tests, Doris achieved leading performance</li>
        </ul>
        </td>
        <td>
          <ul>
            <li style={{fontSize:'14px'}}>In terms of ClickBench performance, ClickHouse and Doris have been taking turns leading</li>
            <li style={{fontSize:'14px'}}>Experiences many OOM (Out of Memory) queries in large TPC-H and TPC-DS tests</li>
        </ul>
        </td>
    </tr>
    </tbody>
</table>

## Performance Comparison

### ClickBench Benchmark

<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>ClickBench is a benchmarking tool created and maintained by the ClickHouse team to evaluate the performance of analytical databases.</p>
        <p>It focuses on testing the performance of **large, flat tables rather than complex multi-table joins.** It uses real-world data from a major web analytics platform, covering typical scenarios such as clickstream analysis and structured logs.</p>
        <p>The benchmark consists of a set of queries that test aggregation operations and single-table performance, without involving complex joins. This makes it especially useful for evaluating databases optimized for real-time analytics and large-scale data processing.</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="1200" height="338" decoding="async" data-nimg="1" src="/images/comparisons/clickbench-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>


### SSB-Flat SF100 Benchmark

<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>SSB-Flat SF100 is a benchmark designed to test the performance of analytical databases in handling large, wide tables.</p>
        <p>It is derived from the Star Schema Benchmark (SSB) but flattens the star schema into a single wide table to **focus on the performance of single-table queries.**</p>
        <p>The SF100 indicates that the data scale is 100 times the base size, making it a significant test for evaluating query performance and system scalability.</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="720" height="338" decoding="async" data-nimg="1" src="/images/comparisons/ssb-flat-sf100-benchmark-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>

### TPC-H SF100 Benchmark



<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>The TPC-H benchmark with a scale factor of 100 (SF100) is a widely used standard for evaluating database performance. It includes a set of complex SQL queries designed to simulate real-world business intelligence workloads.</p>
        <p>The SF100 indicates that the data size is 100 times the base size, making it a large-scale test to measure query performance and system scalability.</p>
        <p>**Note: Since ClickHouse failed to execute 7 queries, the total execution time refers to the time taken by Doris to run all 22 queries, and by ClickHouse to run only 15 queries.**</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="1050" height="338" decoding="async" data-nimg="1" src="/images/comparisons/tpch-sf100-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>

### TPC-DS 1TB Benchmark



<div style={{ display:'flex', justifyContent:'space-between', flexDirection:'row', paddingTop:'0.5rem',paddingBottom:'0.5rem'}}>
    <div style={{marginRight:'2rem'}}>
        <p>TPC-DS 1TB is a widely recognized benchmark for evaluating the performance of data warehouses and analytical databases. It involves a dataset of approximately 1TB in size, containing around 6.35 billion records spread across 24 tables.</p>
        <p>The benchmark includes 99 complex queries designed to test various aspects of database performance, such as joins, aggregations, and subqueries.</p>
        <p>The TPC-DS schema is based on a snowflake schema, representing real-world scenarios like web, catalog, and store sales. The 1TB scale is considered a moderate size for data warehouses but is still challenging due to the complexity of the queries and the large number of records</p>
        <p>**Note：TPC-DS makes heavy use of correlated subqueries which are at the time of testing (September 2024) not supported by ClickHouse. As a result, about 50% of benchmark queries will fail with errors.**</p>
    </div>
    <div>
        <img alt="ClickBench  Benchmark" loading="lazy" width="1300" height="338" decoding="async" data-nimg="1" src="/images/comparisons/tpc-ds-1tb-ck.png" style={{color: 'transparent', marginTop:0}} />
    </div>
</div>

## More Migration Stories

- [Less components, higher performance: Apache Doris instead of ClickHouse, MySQL, Presto, and HBase](https://doris.apache.org/blog/less-components-higher-performance-apache-doris-instead-of-clickhouse-mysql-presto-and-hbase)


- [Migrating from ClickHouse to Apache Doris: What happened?](https://doris.apache.org/blog/migrating-from-clickhouse-to-apache-doris-what-happened)

- [ClickHouse & Kudu to Doris: 10X concurrency increased, 70% latency down](https://doris.apache.org/blog/linkedcare)